--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
-project(NeuroneNetwork)
+project(NeuronNetwork)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)
@@ -11,7 +11,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
 include_directories("/usr/local/include" ${CMAKE_SOURCE_DIR}/include)
 link_directories(${CMAKE_SOURCE_DIR}/lib)
 
-add_executable(Neurons src/main.cpp src/Random.cpp src/NeuroneNetwork.cpp src/Neurone.cpp src/Simulation.cpp)
+add_executable(Neurons src/main.cpp src/Random.cpp src/NeuronNetwork.cpp src/Neuron.cpp src/Simulation.cpp)
 
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
